[gd_scene load_steps=4 format=2]

[ext_resource path="res://ConfigPop.gd" type="Script" id=1]
[ext_resource path="res://icons/back.png" type="Texture" id=2]

[sub_resource type="ButtonGroup" id=1]
resource_name = "RadioLevel"

[node name="ConfigPop" type="PopupPanel"]
margin_right = 1000.0
margin_bottom = 700.0
script = ExtResource( 1 )

[node name="Config" type="Panel" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 996.0
margin_bottom = 696.0

[node name="Label" type="Label" parent="Config"]
margin_left = 58.0
margin_top = 53.0
margin_right = 204.0
margin_bottom = 72.0
text = "Configure Chess War"

[node name="ColorRect" type="ColorRect" parent="Config"]
margin_right = 1000.0
margin_bottom = 850.0
color = Color( 0.901961, 0.588235, 0.0509804, 1 )

[node name="BackPanel" type="Button" parent="Config/ColorRect"]
margin_right = 50.0
margin_bottom = 40.0
action_mode = 0

[node name="BackToGame" type="TextureRect" parent="Config/ColorRect/BackPanel"]
margin_right = 128.0
margin_bottom = 128.0
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="Config"]
margin_left = 61.0
margin_top = 81.0
margin_right = 236.0
margin_bottom = 179.0

[node name="Label" type="Label" parent="Config/VBoxContainer"]
margin_right = 175.0
margin_bottom = 14.0
text = "Choose Chess War Level"

[node name="HBoxContainer" type="HBoxContainer" parent="Config/VBoxContainer"]
margin_top = 18.0
margin_right = 175.0
margin_bottom = 42.0

[node name="Level0" type="CheckBox" parent="Config/VBoxContainer/HBoxContainer" groups=["war_levels"]]
margin_right = 24.0
margin_bottom = 24.0
group = SubResource( 1 )

[node name="Label" type="Label" parent="Config/VBoxContainer/HBoxContainer"]
margin_left = 28.0
margin_top = 5.0
margin_right = 74.0
margin_bottom = 19.0
text = "Level 0"

[node name="HBoxContainer2" type="HBoxContainer" parent="Config/VBoxContainer"]
margin_top = 46.0
margin_right = 175.0
margin_bottom = 70.0

[node name="Level1" type="CheckBox" parent="Config/VBoxContainer/HBoxContainer2" groups=["war_levels"]]
margin_right = 24.0
margin_bottom = 24.0
group = SubResource( 1 )

[node name="Label" type="Label" parent="Config/VBoxContainer/HBoxContainer2"]
margin_left = 28.0
margin_top = 5.0
margin_right = 74.0
margin_bottom = 19.0
text = "Level 1"

[node name="HBoxContainer3" type="HBoxContainer" parent="Config/VBoxContainer"]
margin_top = 74.0
margin_right = 175.0
margin_bottom = 98.0

[node name="Level2" type="CheckBox" parent="Config/VBoxContainer/HBoxContainer3" groups=["war_levels"]]
margin_right = 24.0
margin_bottom = 24.0
group = SubResource( 1 )

[node name="Label" type="Label" parent="Config/VBoxContainer/HBoxContainer3"]
margin_left = 28.0
margin_top = 5.0
margin_right = 74.0
margin_bottom = 19.0
text = "Level 2"

[node name="LabelsBCL1" type="Label" parent="Config"]
margin_left = 310.0
margin_top = 85.0
margin_right = 448.0
margin_bottom = 99.0
text = "Level 1 Battle Chance"

[node name="VBC_L1" type="VBoxContainer" parent="Config"]
margin_left = 304.0
margin_top = 105.0
margin_right = 578.0
margin_bottom = 193.0

[node name="HBC_battlechance" type="HBoxContainer" parent="Config/VBC_L1"]
margin_right = 274.0
margin_bottom = 24.0

[node name="sb_battlechancediv" type="SpinBox" parent="Config/VBC_L1/HBC_battlechance"]
margin_right = 74.0
margin_bottom = 24.0
max_value = 1.0
step = 0.01

[node name="Label" type="Label" parent="Config/VBC_L1/HBC_battlechance"]
margin_left = 78.0
margin_top = 5.0
margin_right = 250.0
margin_bottom = 19.0
text = "Battle Chance Dividing line"

[node name="AbilitiesLabel" type="Label" parent="Config"]
margin_left = 73.0
margin_top = 241.0
margin_right = 371.0
margin_bottom = 255.0
text = "The \"War Abilities\" of the piece types. Level 2."

[node name="HBoxContainer" type="HBoxContainer" parent="Config"]
margin_left = 32.0
margin_top = 261.0
margin_right = 550.0
margin_bottom = 561.0

[node name="vbc_king" type="VBoxContainer" parent="Config/HBoxContainer"]
margin_right = 125.0
margin_bottom = 300.0

[node name="vars" type="Label" parent="Config/HBoxContainer/vbc_king"]
margin_right = 125.0
margin_bottom = 14.0
text = "King"

[node name="kinga" type="HBoxContainer" parent="Config/HBoxContainer/vbc_king"]
margin_top = 18.0
margin_right = 125.0
margin_bottom = 42.0

[node name="sb_kinga" type="SpinBox" parent="Config/HBoxContainer/vbc_king/kinga"]
margin_right = 74.0
margin_bottom = 24.0
max_value = 100000.0

[node name="Label" type="Label" parent="Config/HBoxContainer/vbc_king/kinga"]
margin_left = 78.0
margin_top = 5.0
margin_right = 118.0
margin_bottom = 19.0
text = "Attack"

[node name="kingd" type="HBoxContainer" parent="Config/HBoxContainer/vbc_king"]
margin_top = 46.0
margin_right = 125.0
margin_bottom = 70.0

[node name="sb_kingd" type="SpinBox" parent="Config/HBoxContainer/vbc_king/kingd"]
margin_right = 74.0
margin_bottom = 24.0
max_value = 200.0

[node name="Label" type="Label" parent="Config/HBoxContainer/vbc_king/kingd"]
margin_left = 78.0
margin_top = 5.0
margin_right = 124.0
margin_bottom = 19.0
text = "Defend"

[node name="kingr" type="HBoxContainer" parent="Config/HBoxContainer/vbc_king"]
margin_top = 74.0
margin_right = 125.0
margin_bottom = 98.0

[node name="sb_kingr" type="SpinBox" parent="Config/HBoxContainer/vbc_king/kingr"]
margin_right = 74.0
margin_bottom = 24.0
max_value = 1.0
step = 0.01

[node name="Label" type="Label" parent="Config/HBoxContainer/vbc_king/kingr"]
margin_left = 78.0
margin_top = 5.0
margin_right = 125.0
margin_bottom = 19.0
text = "Recupe"

[node name="kingv" type="HBoxContainer" parent="Config/HBoxContainer/vbc_king"]
margin_top = 102.0
margin_right = 125.0
margin_bottom = 126.0

[node name="sb_kingv" type="SpinBox" parent="Config/HBoxContainer/vbc_king/kingv"]
margin_right = 74.0
margin_bottom = 24.0
max_value = 1000.0

[node name="Label" type="Label" parent="Config/HBoxContainer/vbc_king/kingv"]
margin_left = 78.0
margin_top = 5.0
margin_right = 113.0
margin_bottom = 19.0
text = "Value"

[node name="vbc_queen" type="VBoxContainer" parent="Config/HBoxContainer"]
margin_left = 129.0
margin_right = 254.0
margin_bottom = 300.0

[node name="vars" type="Label" parent="Config/HBoxContainer/vbc_queen"]
margin_right = 125.0
margin_bottom = 14.0
text = "Queen"

[node name="queena" type="HBoxContainer" parent="Config/HBoxContainer/vbc_queen"]
margin_top = 18.0
margin_right = 125.0
margin_bottom = 42.0

[node name="sb_queena" type="SpinBox" parent="Config/HBoxContainer/vbc_queen/queena"]
margin_right = 74.0
margin_bottom = 24.0
max_value = 200.0

[node name="Label" type="Label" parent="Config/HBoxContainer/vbc_queen/queena"]
margin_left = 78.0
margin_top = 5.0
margin_right = 118.0
margin_bottom = 19.0
text = "Attack"

[node name="queend" type="HBoxContainer" parent="Config/HBoxContainer/vbc_queen"]
margin_top = 46.0
margin_right = 125.0
margin_bottom = 70.0

[node name="sb_queend" type="SpinBox" parent="Config/HBoxContainer/vbc_queen/queend"]
margin_right = 74.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="Config/HBoxContainer/vbc_queen/queend"]
margin_left = 78.0
margin_top = 5.0
margin_right = 124.0
margin_bottom = 19.0
text = "Defend"

[node name="queenr" type="HBoxContainer" parent="Config/HBoxContainer/vbc_queen"]
margin_top = 74.0
margin_right = 125.0
margin_bottom = 98.0

[node name="sb_queenr" type="SpinBox" parent="Config/HBoxContainer/vbc_queen/queenr"]
margin_right = 74.0
margin_bottom = 24.0
max_value = 0.75
step = 0.01

[node name="Label" type="Label" parent="Config/HBoxContainer/vbc_queen/queenr"]
margin_left = 78.0
margin_top = 5.0
margin_right = 125.0
margin_bottom = 19.0
text = "Recupe"

[node name="queenv" type="HBoxContainer" parent="Config/HBoxContainer/vbc_queen"]
margin_top = 102.0
margin_right = 125.0
margin_bottom = 126.0

[node name="sb_queenv" type="SpinBox" parent="Config/HBoxContainer/vbc_queen/queenv"]
margin_right = 74.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="Config/HBoxContainer/vbc_queen/queenv"]
margin_left = 78.0
margin_top = 5.0
margin_right = 113.0
margin_bottom = 19.0
text = "Value"

[node name="vbc_bishop" type="VBoxContainer" parent="Config/HBoxContainer"]
margin_left = 258.0
margin_right = 383.0
margin_bottom = 300.0

[node name="vars" type="Label" parent="Config/HBoxContainer/vbc_bishop"]
margin_right = 125.0
margin_bottom = 14.0
text = "Bishop"

[node name="bishopa" type="HBoxContainer" parent="Config/HBoxContainer/vbc_bishop"]
margin_top = 18.0
margin_right = 125.0
margin_bottom = 42.0

[node name="sb_bishopa" type="SpinBox" parent="Config/HBoxContainer/vbc_bishop/bishopa"]
margin_right = 74.0
margin_bottom = 24.0
max_value = 150.0

[node name="Label" type="Label" parent="Config/HBoxContainer/vbc_bishop/bishopa"]
margin_left = 78.0
margin_top = 5.0
margin_right = 118.0
margin_bottom = 19.0
text = "Attack"

[node name="bishopd" type="HBoxContainer" parent="Config/HBoxContainer/vbc_bishop"]
margin_top = 46.0
margin_right = 125.0
margin_bottom = 70.0

[node name="sb_bishopd" type="SpinBox" parent="Config/HBoxContainer/vbc_bishop/bishopd"]
margin_right = 74.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="Config/HBoxContainer/vbc_bishop/bishopd"]
margin_left = 78.0
margin_top = 5.0
margin_right = 124.0
margin_bottom = 19.0
text = "Defend"

[node name="bishopr" type="HBoxContainer" parent="Config/HBoxContainer/vbc_bishop"]
margin_top = 74.0
margin_right = 125.0
margin_bottom = 98.0

[node name="sb_bishopr" type="SpinBox" parent="Config/HBoxContainer/vbc_bishop/bishopr"]
margin_right = 74.0
margin_bottom = 24.0
max_value = 0.75
step = 0.01

[node name="Label" type="Label" parent="Config/HBoxContainer/vbc_bishop/bishopr"]
margin_left = 78.0
margin_top = 5.0
margin_right = 125.0
margin_bottom = 19.0
text = "Recupe"

[node name="bishopv" type="HBoxContainer" parent="Config/HBoxContainer/vbc_bishop"]
margin_top = 102.0
margin_right = 125.0
margin_bottom = 126.0

[node name="sb_bishopv" type="SpinBox" parent="Config/HBoxContainer/vbc_bishop/bishopv"]
margin_right = 74.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="Config/HBoxContainer/vbc_bishop/bishopv"]
margin_left = 78.0
margin_top = 5.0
margin_right = 113.0
margin_bottom = 19.0
text = "Value"

[node name="vbc_knight" type="VBoxContainer" parent="Config/HBoxContainer"]
margin_left = 387.0
margin_right = 512.0
margin_bottom = 300.0

[node name="vars" type="Label" parent="Config/HBoxContainer/vbc_knight"]
margin_right = 125.0
margin_bottom = 14.0
text = "Knight"

[node name="knighta" type="HBoxContainer" parent="Config/HBoxContainer/vbc_knight"]
margin_top = 18.0
margin_right = 125.0
margin_bottom = 42.0

[node name="sb_knighta" type="SpinBox" parent="Config/HBoxContainer/vbc_knight/knighta"]
margin_right = 74.0
margin_bottom = 24.0
max_value = 150.0

[node name="Label" type="Label" parent="Config/HBoxContainer/vbc_knight/knighta"]
margin_left = 78.0
margin_top = 5.0
margin_right = 118.0
margin_bottom = 19.0
text = "Attack"

[node name="knightd" type="HBoxContainer" parent="Config/HBoxContainer/vbc_knight"]
margin_top = 46.0
margin_right = 125.0
margin_bottom = 70.0

[node name="sb_knightd" type="SpinBox" parent="Config/HBoxContainer/vbc_knight/knightd"]
margin_right = 74.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="Config/HBoxContainer/vbc_knight/knightd"]
margin_left = 78.0
margin_top = 5.0
margin_right = 124.0
margin_bottom = 19.0
text = "Defend"

[node name="knightr" type="HBoxContainer" parent="Config/HBoxContainer/vbc_knight"]
margin_top = 74.0
margin_right = 125.0
margin_bottom = 98.0

[node name="sb_knightr" type="SpinBox" parent="Config/HBoxContainer/vbc_knight/knightr"]
margin_right = 74.0
margin_bottom = 24.0
max_value = 0.75
step = 0.01

[node name="Label" type="Label" parent="Config/HBoxContainer/vbc_knight/knightr"]
margin_left = 78.0
margin_top = 5.0
margin_right = 125.0
margin_bottom = 19.0
text = "Recupe"

[node name="knightv" type="HBoxContainer" parent="Config/HBoxContainer/vbc_knight"]
margin_top = 102.0
margin_right = 125.0
margin_bottom = 126.0

[node name="sb_knightv" type="SpinBox" parent="Config/HBoxContainer/vbc_knight/knightv"]
margin_right = 74.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="Config/HBoxContainer/vbc_knight/knightv"]
margin_left = 78.0
margin_top = 5.0
margin_right = 113.0
margin_bottom = 19.0
text = "Value"

[node name="vbc_rook" type="VBoxContainer" parent="Config/HBoxContainer"]
margin_left = 516.0
margin_right = 641.0
margin_bottom = 300.0

[node name="vars" type="Label" parent="Config/HBoxContainer/vbc_rook"]
margin_right = 125.0
margin_bottom = 14.0
text = "Rook"

[node name="rooka" type="HBoxContainer" parent="Config/HBoxContainer/vbc_rook"]
margin_top = 18.0
margin_right = 125.0
margin_bottom = 42.0

[node name="sb_rooka" type="SpinBox" parent="Config/HBoxContainer/vbc_rook/rooka"]
margin_right = 74.0
margin_bottom = 24.0
max_value = 150.0

[node name="Label" type="Label" parent="Config/HBoxContainer/vbc_rook/rooka"]
margin_left = 78.0
margin_top = 5.0
margin_right = 118.0
margin_bottom = 19.0
text = "Attack"

[node name="rookd" type="HBoxContainer" parent="Config/HBoxContainer/vbc_rook"]
margin_top = 46.0
margin_right = 125.0
margin_bottom = 70.0

[node name="sb_rookd" type="SpinBox" parent="Config/HBoxContainer/vbc_rook/rookd"]
margin_right = 74.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="Config/HBoxContainer/vbc_rook/rookd"]
margin_left = 78.0
margin_top = 5.0
margin_right = 124.0
margin_bottom = 19.0
text = "Defend"

[node name="rookr" type="HBoxContainer" parent="Config/HBoxContainer/vbc_rook"]
margin_top = 74.0
margin_right = 125.0
margin_bottom = 98.0

[node name="sb_rookr" type="SpinBox" parent="Config/HBoxContainer/vbc_rook/rookr"]
margin_right = 74.0
margin_bottom = 24.0
max_value = 0.75
step = 0.01

[node name="Label" type="Label" parent="Config/HBoxContainer/vbc_rook/rookr"]
margin_left = 78.0
margin_top = 5.0
margin_right = 125.0
margin_bottom = 19.0
text = "Recupe"

[node name="rookv" type="HBoxContainer" parent="Config/HBoxContainer/vbc_rook"]
margin_top = 102.0
margin_right = 125.0
margin_bottom = 126.0

[node name="sb_rookv" type="SpinBox" parent="Config/HBoxContainer/vbc_rook/rookv"]
margin_right = 74.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="Config/HBoxContainer/vbc_rook/rookv"]
margin_left = 78.0
margin_top = 5.0
margin_right = 113.0
margin_bottom = 19.0
text = "Value"

[node name="vbc_pawn" type="VBoxContainer" parent="Config/HBoxContainer"]
margin_left = 645.0
margin_right = 770.0
margin_bottom = 300.0

[node name="vars" type="Label" parent="Config/HBoxContainer/vbc_pawn"]
margin_right = 125.0
margin_bottom = 14.0
text = "Pawn"

[node name="pawna" type="HBoxContainer" parent="Config/HBoxContainer/vbc_pawn"]
margin_top = 18.0
margin_right = 125.0
margin_bottom = 42.0

[node name="sb_pawna" type="SpinBox" parent="Config/HBoxContainer/vbc_pawn/pawna"]
margin_right = 74.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="Config/HBoxContainer/vbc_pawn/pawna"]
margin_left = 78.0
margin_top = 5.0
margin_right = 118.0
margin_bottom = 19.0
text = "Attack"

[node name="pawnd" type="HBoxContainer" parent="Config/HBoxContainer/vbc_pawn"]
margin_top = 46.0
margin_right = 125.0
margin_bottom = 70.0

[node name="sb_pawnd" type="SpinBox" parent="Config/HBoxContainer/vbc_pawn/pawnd"]
margin_right = 74.0
margin_bottom = 24.0
max_value = 75.0

[node name="Label" type="Label" parent="Config/HBoxContainer/vbc_pawn/pawnd"]
margin_left = 78.0
margin_top = 5.0
margin_right = 124.0
margin_bottom = 19.0
text = "Defend"

[node name="pawnr" type="HBoxContainer" parent="Config/HBoxContainer/vbc_pawn"]
margin_top = 74.0
margin_right = 125.0
margin_bottom = 98.0

[node name="sb_pawnr" type="SpinBox" parent="Config/HBoxContainer/vbc_pawn/pawnr"]
margin_right = 74.0
margin_bottom = 24.0
max_value = 0.75
step = 0.01

[node name="Label" type="Label" parent="Config/HBoxContainer/vbc_pawn/pawnr"]
margin_left = 78.0
margin_top = 5.0
margin_right = 125.0
margin_bottom = 19.0
text = "Recupe"

[node name="pawnv" type="HBoxContainer" parent="Config/HBoxContainer/vbc_pawn"]
margin_top = 102.0
margin_right = 125.0
margin_bottom = 126.0

[node name="sb_pawnv" type="SpinBox" parent="Config/HBoxContainer/vbc_pawn/pawnv"]
margin_right = 74.0
margin_bottom = 24.0
max_value = 75.0

[node name="Label" type="Label" parent="Config/HBoxContainer/vbc_pawn/pawnv"]
margin_left = 78.0
margin_top = 5.0
margin_right = 113.0
margin_bottom = 19.0
text = "Value"

[connection signal="pressed" from="Config/ColorRect/BackPanel" to="." method="_on_BackPanel_pressed"]
